Might have fixed vertical scroll issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,7 @@
     display: none;
   }
 }
+
+body {
+  position: relative
+}
